# analytics-service

./: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
.gitbhub/workflows/: ci.yml
.github/workflows/: ci-branch-v1.yml.ref  ci-branch.yml  ci-main-v1.yml.ref  ci-main.yml  ci.yml
app/: config.py  main.py
app/api/: router.py
app/api/v1/: analytics.py  health.py  market_data.py  valuations.py
app/db/: session.py
app/middleware/: logging.py
app/models/: __init__.py  analytics_snapshot.py  market_data.py  valuation.py
app/observability/: tracing.py
app/schemas/: analytics_snapshot.py  events.py  market_data.py  valuation.py
app/services/: analytics_service.py  market_data_service.py  valuation_service.py
migrations/: env.py
tests/: conftest.py  test_health.py  test_market_data.py
